objects/smagicinteract__SMS_Batch_Execution_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS Batch Execution Tracker</relationshipLabel>
        <relationshipName>SMS_Batch_Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Execution_Status__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SMS Batch Execution Tracker</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Batch Execution Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>